<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_back"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/def_top_bottom_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivIcon"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bUser"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:background="@drawable/home_buttons_gradient"
            android:text="@string/user"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bDriver"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home_buttons_gradient"
            android:text="@string/driver"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivIcon"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvFriendly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps_friendly"
            android:textColor="#000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tvLimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps_limo"
            android:textColor="#000"
            android:textSize="36sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/home_icon"
        android:src="@drawable/home_icon" />

</RelativeLayout>